[Fix] Comments were broken in new design
+ Fix redirect in `comment_post` view
+ Add `comment_flag` url/view

--- a/scss/comments.scss
+++ b/scss/comments.scss
@@ -3,6 +3,51 @@
 
 .comment-list {
   min-height: 5rem;
+
+  .comment + .replies {
+    margin-top: rem-calc(28px);
+  }
+
+  .replies {
+    // background-color: $gcl-lightgray;
+    margin-left: rem-calc(50px);
+
+    .comment {
+      p.content {
+        background-color: #EEE;
+        padding-left: rem-calc(10px);
+      }
+      margin-bottom: rem-calc(8px);
+      margin: 0;
+    }
+  }
+}
+
+.comment {
+  p.content {}
+
+  .actions {
+    visibility: hidden;
+    float: right;
+    width: auto;
+
+    vertical-align: middle;
+
+    text-transform: uppercase;
+    font-size: rem-calc(12px);
+
+    a {
+      margin-left: rem-calc(10px);
+      &:focus { visibility: visible; }
+    }
+  }
+
+  &:hover {
+    background-color: rgb(250, 250, 250);
+    .actions {
+      visibility: visible;
+    }
+  }
 }
 
 .comment-compact, .comment {
@@ -21,6 +66,7 @@
     padding-bottom: rem-calc(7px);
   }
 }
+
 
 /*********** COMPACT COMMENTS ***********/
 
@@ -82,6 +128,8 @@
 
 }
 
+/******* COMMENT FORMS ********/
+
 .comment-form-container {
   position: relative;
   margin-top: 1rem;
@@ -117,4 +165,8 @@
     text-transform: uppercase;
     font-size: $button-font-size;
   }
+}
+
+.reply-form {
+  display: none;
 }
